<resources>
    <string name="app_name">rec</string>
    <string name="title_activity_login2">Recuperació Carlos Puig Navarro</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="estat">"Estat : "</string>
    <string name="data">"Data : "</string>
    <string name="nom">"Nom : "</string>
    <string name="assumpte">"Assumpte : "</string>
    <string name="tipus">"Tipus : "</string>
    <string name="distancia">"Distancia : "</string>
    <string name="title_activity_maps">Map</string>
    <string name="not_log_in">No se pudo iniciar sesión</string>
    <string name="log_out">Log Out</string>
    <string name="revoke">Revoke</string>
    <string name="not_close_session">No se pudo cerrar sesión</string>
    <string name="not_revoke">No se pudo revocar el acceso</string>
    <string name="not_firebase_auth">No se pudo autenticar con Firebase</string>
</resources>
